Fixed button container display on small screen

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -94,6 +94,19 @@ header h1 > span::before {
   margin-top: 1rem;
 }
 
+@media (max-width: 480px) {
+  .auth-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 1rem;
+  }
+  .auth-container > a:nth-child(even) {
+    width: 7rem;
+    text-align: center;
+  }
+}
+
 .auth-container > * {
   margin-right: 2rem;
   text-decoration: none;
@@ -106,6 +119,7 @@ header h1 > span::before {
   color: white;
   padding: 0.5rem 0.8rem;
   border-radius: 18px;
+  font-weight: 600;
 }
 
 .auth-container > a:nth-child(even) {
